--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "The command line utility tool to get top news",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --timeout 15000"
   },
   "bin": {
     "gettopnews": "index.js"
@@ -17,5 +17,10 @@
     "optimist": "^0.6.1",
     "request": "^2.88.0",
     "valid-url": "^1.0.9"
+  },
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "chai-http": "^4.2.0",
+    "mocha": "^5.2.0"
   }
 }
